// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Textarea Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of textarea in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Textarea__Field-kPVRAV diJehs"
            data-test={undefined}
          >
            <textarea
              className="Textarea__StyledTextArea-iLqCZR eMnGeW"
              disabled={undefined}
              maxLength={undefined}
              name={undefined}
              onBlur={undefined}
              onChange={[Function]}
              onFocus={undefined}
              placeholder="Placeholder"
              size="normal"
              value=""
            />
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Unknown
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          placeholder
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Placeholder
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                change()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          value
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              
                              "
                            </span>
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of textarea in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Textarea__Field-kPVRAV gVgVGH"
            data-test="test"
          >
            <span
              className="FormLabel-kJFBRQ fuYBgg"
              data-test={undefined}
            >
              <span>
                Label
              </span>
            </span>
            <textarea
              className="Textarea__StyledTextArea-iLqCZR gKGYXg"
              disabled={true}
              maxLength={undefined}
              name={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Placeholder"
              size="small"
              value=""
            />
            <div
              className="FormFeedback__StyledFormFeedback-cuFyWp cFaoou"
              data-test={undefined}
            >
              Something went wrong.
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Unknown
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              small
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Label
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          value
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          fullHeight
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          placeholder
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Placeholder
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          help
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#777",
                                  }
                                }
                              >
                                null
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          error
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Something went wrong.
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          disabled
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          maxLength
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#777",
                                  }
                                }
                              >
                                null
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          resize
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              vertical
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                change()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onFocus
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                focus()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onBlur
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                blur()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          dataTest
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              test
                              "
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea Small size 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Small size
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of textarea in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Textarea__Field-kPVRAV diJehs"
            data-test={undefined}
          >
            <textarea
              className="Textarea__StyledTextArea-iLqCZR eEsQMd"
              disabled={undefined}
              maxLength={undefined}
              name={undefined}
              onBlur={undefined}
              onChange={[Function]}
              onFocus={undefined}
              placeholder="Placeholder"
              size="small"
              value=""
            />
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Unknown
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          size
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              small
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          placeholder
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Placeholder
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                change()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          value
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              
                              "
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea With error 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With error
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of textarea in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Textarea__Field-kPVRAV diJehs"
            data-test={undefined}
          >
            <textarea
              className="Textarea__StyledTextArea-iLqCZR jSIIOE"
              disabled={undefined}
              maxLength={undefined}
              name={undefined}
              onBlur={undefined}
              onChange={[Function]}
              onFocus={undefined}
              placeholder="Placeholder"
              size="normal"
              value="Something"
            />
            <div
              className="FormFeedback__StyledFormFeedback-cuFyWp cFaoou"
              data-test={undefined}
            >
              Something went wrong.
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Unknown
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          placeholder
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Placeholder
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          error
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Something went wrong.
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                change()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          value
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Something
                              "
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea With help 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With help
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of textarea in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Textarea__Field-kPVRAV diJehs"
            data-test={undefined}
          >
            <textarea
              className="Textarea__StyledTextArea-iLqCZR eMnGeW"
              disabled={undefined}
              maxLength={undefined}
              name={undefined}
              onBlur={undefined}
              onChange={[Function]}
              onFocus={undefined}
              placeholder="Placeholder"
              size="normal"
              value="Something"
            />
            <div
              className="FormFeedback__StyledFormFeedback-cuFyWp hVyVwg"
              data-test={undefined}
            >
              Everything is fine.
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Unknown
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          placeholder
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Placeholder
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          help
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Everything is fine.
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                change()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          value
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Something
                              "
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea With label 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With label
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Some description about this type of textarea in general.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Textarea__Field-kPVRAV diJehs"
            data-test={undefined}
          >
            <span
              className="FormLabel-kJFBRQ fuYBgg"
              data-test={undefined}
            >
              <span>
                Label
              </span>
            </span>
            <textarea
              className="Textarea__StyledTextArea-iLqCZR eMnGeW"
              disabled={undefined}
              maxLength={undefined}
              name={undefined}
              onBlur={undefined}
              onChange={[Function]}
              onFocus={undefined}
              placeholder="Placeholder"
              size="normal"
              value=""
            />
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      Unknown
                    </span>
                    <span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          label
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Label
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          placeholder
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              Placeholder
                              "
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          onChange
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                change()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                        <span>
                          <br />
                            
                        </span>
                        <span
                          style={Object {}}
                        >
                          value
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span
                              style={
                                Object {
                                  "color": "#22a",
                                  "wordBreak": "break-word",
                                }
                              }
                            >
                              "
                              
                              "
                            </span>
                          </span>
                        </span>
                        <br />
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
